Ajout des pages et des content provisoires

--- a/src/PA/GeneralBundle/Resources/translations/messages.fr.yml
+++ b/src/PA/GeneralBundle/Resources/translations/messages.fr.yml
@@ -103,3 +103,4 @@ mention_11_2: "Informations personnelles : « les informations qui permettent, s
 footer_text_1: "Copyright © An Korn 2014."
 footer_text_2: "Une production de Mr BETOURNE, Mr GIGOU et Mr LAGADEC."
 mentions_footer_title: "Mentions légales"
+contact_footer_title: "Contact"
