J'ai modifié la route des détails des annonces, rajouté des caractères oubliés par ci par là et j'ai rajouté une ligne dans le fichier de trad en FR. Remove de la version EN.

--- a/src/PA/GeneralBundle/Resources/translations/messages.fr.yml
+++ b/src/PA/GeneralBundle/Resources/translations/messages.fr.yml
@@ -55,6 +55,7 @@ Creer_annonce_title: "Création d'une annonce"
 button_voir_detail: "Voir détail"
 button_edit_ads: "Modifier l'annonce"
 bouton_add_ads: "Ajouter une annonce"
+button_delete_ads: "Supprimer l'annonce"
 
 # ======
 # Offres
