Fin de la page Espace perso. Gestion de l'interface pour l'user

--- a/src/PA/GeneralBundle/Resources/translations/messages.fr.yml
+++ b/src/PA/GeneralBundle/Resources/translations/messages.fr.yml
@@ -84,12 +84,16 @@ mon_compte_welcome: "Bienvenue sur votre espace perso"
 mon_compte_perso_info: "Informations personnelles"
 mon_compte_profile: "Consultation"
 mon_compte_editMode: "Modification"
+mon_compte_editMode_warning: "La modification n'est actuellement pas disponible. Veuillez contacter votre administrateur en cliquant sur le lien ci-dessous."
+mon_compte_editMode_warning_email: "nicolas.gigou@gmail.com"
 mon_compte_username: "Pseudonyme"
 mon_compte_username_help: "Votre pseudonyme est utilisé pour votre identification. Il ne peut être modifié."
 mon_compte_firstname: "Nom"
 mon_compte_lastname: "Prénom"
 mon_compte_email: "Adresse e-mail"
 mon_compte_role: "Rôle"
+mon_compte_role_admin: "Administrateur"
+mon_compte_role_user: "Utilisateurs"
 mon_compte_civilite: "Civilité"
 mon_compte_tel: "Numéro de téléphone"
 mon_compte_pass1: "Votre mot de passe"
