Ajout de boutons suppression

--- a/src/PA/GeneralBundle/Resources/translations/messages.fr.yml
+++ b/src/PA/GeneralBundle/Resources/translations/messages.fr.yml
@@ -36,7 +36,7 @@ Legend_slide3: "Recherchez ce dont vous avez besoin."
 message_bienvenue_top: "Bienvenue sur le site d'An Korn !"
 fil_ariane_text: "Vous êtes ici : "
 panel_heading_1_title: "Des offres"
-panel_heading_1_content: "Vous avez des objets que vous souhaitez vendre mais vous ne savez pas comment ? Faites confiance à An Korn et déposer vos annonces !"
+panel_heading_1_content: "Vous avez des objets que vous souhaitez vendre mais vous ne savez pas comment ? Faites confiance à An Korn et déposez vos annonces !"
 panel_heading_2_title: "Des demandes"
 panel_heading_2_content: "Vous ne voulez pas vendre mais plutôt acheter ? Vous recherchez des objets ? An Korn a pensé à tout !"
 panel_heading_3_title: "Un espace client"
@@ -60,7 +60,8 @@ annonces_portofolio_demandes_title: "Annonces de demandes"
 no_result_annonces: "Aucun résultat."
 Creer_annonce_title: "Création d'une annonce"
 button_voir_detail: "Voir détail"
-button_edit_ads: "Modifier l'annonce"
+button_addAds_to_pan: "Panier"
+button_edit_ads: "Modifier"
 bouton_add_ads: "Ajouter une annonce"
 button_delete_ads: "Supprimer l'annonce"
 
